--- a/findly-builder/src/app/components/insights/insights.component.html
+++ b/findly-builder/src/app/components/insights/insights.component.html
@@ -6,15 +6,15 @@
     <div class="mini-graph">
      <div class="search-val">
          <p>Searches </p> 
-         <span>4983</span>
+         <span>{{analystic.searches || 0}}</span>
      </div>
      <div class="click-val">
          <p>Clicks </p> 
-         <span>4254</span>
+         <span>{{analystic.searches || 0}}</span>
      </div>
      <div class="ctr-val">
          <p>CTR </p> 
-         <span>94%</span>
+         <span>{{ctrVal || 0}}%</span>
      </div>   
       <div class="data-val" (click) = "mouseEnter()"> <!-- (mouseenter) ="mouseEnter()" -->
          <div class="graph">
@@ -30,8 +30,8 @@
      </div> 
      </div>
      <div class="tab-grp">
-         <span class="tab-name tab-ana active" (click)="swapSlider(0)">ANALYSIS</span>
-         <span class="tab-name tab-act" (click)="swapSlider(1)">ACTION LOG</span>
+         <span class="tab-name tab-ana " (click)="swapSlider(0)">ANALYSIS</span>
+         <span class="tab-name tab-act active" (click)="swapSlider(1)">ACTION LOG</span>
          
      </div>
      <!-- drop -->
@@ -99,7 +99,7 @@
  <div class ="graphMode" #graphMode *ngIf="graphMode"  (mouseleave) ="mouseLeave()">
     <div class="graph">
         <div class="header">
-            <span class="head-txt">Searh & Click Trend</span>
+            <span class="head-txt">Search & Click Trend</span>
             <img class="closeCross" src="assets/images/close.svg" (click)="closeCross()">
         </div>
         <div class="legends row">
