--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -70,7 +70,7 @@
                     </div>
                 </perfect-scrollbar>  
                 <div class="footer-simulate">
-                    <button class="kr-sg-button-primary btn_lg" (click)="simulate()"><img src="assets/images/simulate.svg"  class="mr-1">Simulate</button>
+                    <button class="kr-sg-button-primary btn_lg  mr-5" (click)="simulate()"><img src="assets/images/simulate.svg"  class="mr-1">Simulate</button>
                 </div>              
             </div>
         </div>
