--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -6,9 +6,9 @@
             <img src="assets/icons/search_gray.svg" class="search-icon">
         </div>
         <div class="actions">
-            <button class="kr-sg-button-primary btn_lg">Add Facet</button>
-            <button class="kr-sg-button-secondary btn_lg">Deselect</button>
-            <button class="kr-sg-button-danger btn_lg">Delete Facets</button>
+            <button class="kr-sg-button-primary btn_lg" (click)="createNewFacet()">Add Facet</button>
+            <button ng class="kr-sg-button-secondary btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (change)="selectAll(true)">Deselect</button>
+            <button class="kr-sg-button-danger btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="deleteFacets(null,true)">Delete Facets</button>
             <img src="assets/icons/clock.svg">
         </div>
     </div>
@@ -16,7 +16,7 @@
         <div class="header_sec row m-0">
             <div class="col-4 content withcheckbox">
                 <div class="kr-sg-checkbox p-0 m-0">
-                    <input id="checkbox-2" class="checkbox-custom" type="checkbox">
+                    <input id="checkbox-2" class="checkbox-custom " type="checkbox" (change)="selectAll()"  [(ngModel)]="selcectionObj.selectAll">
                     <label for="checkbox-2" class="checkbox-custom-label"></label>
                 </div>
                 <div class="title">FACET Name</div>
@@ -26,51 +26,21 @@
             <div class="col-2 content"></div>
         </div>
         <perfect-scrollbar class="scroll_table">            
-            <div class="body_sec row m-0">
+            <div class="body_sec row m-0" *ngFor="let facet of facets" [ngClass]="{'selected': (selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedItems[facet._id])}">
                 <div class="col-4 content withcheckbox">
                     <div class="kr-sg-checkbox p-0 m-0">
-                        <input id="checkbox-3" class="checkbox-custom" type="checkbox">
-                        <label for="checkbox-3" class="checkbox-custom-label"></label>
+                        <input id="{{facet._id}}" class="checkbox-custom selectEachfacetInput" type="checkbox">
+                        <label for="{{facet._id}}" class="checkbox-custom-label"></label>
                     </div>
-                    <div class="title">Product Type</div>
+                    <div class="title">{{facet.facetName}}</div>
                 </div>
-                <div class="col-3 content">Value</div>
-                <div class="col-3 content">Yes</div>
+                <div class="col-3 content">{{facet.facetType | translate}}</div>
+                <div class="col-3 content">{{facet.isMultiSelect?'Yes':'No'}}</div>
                 <div class="col-2 content actions">
-                    <img class="action_icon" [container]="'body'" (click)="openModal()" ngbTooltip='Edit' src="assets/images/edit-pencil.svg">
-                    <img class="action_icon" ngbTooltip='Delete' [container]="'body'" src="assets/icons/delete-table.svg">
+                    <img class="action_icon" [container]="'body'" (click)="openModal()" ngbTooltip='Edit' (click)="editFacetModal(facet)" src="assets/images/edit-pencil.svg">
+                    <img class="action_icon" ngbTooltip='Delete' [container]="'body'" (click)="deleteFacets(facet)" src="assets/icons/delete-table.svg">
                 </div>
-            </div>
-            <div class="body_sec row m-0 selected">
-                <div class="col-4 content withcheckbox">
-                    <div class="kr-sg-checkbox p-0 m-0">
-                        <input id="checkbox-1" class="checkbox-custom" type="checkbox">
-                        <label for="checkbox-1" class="checkbox-custom-label"></label>
-                    </div>
-                    <div class="title">Asset Class</div>
-                </div>
-                <div class="col-3 content">Value</div>
-                <div class="col-3 content">Yes</div>
-                <div class="col-2 content actions">
-                    <img class="action_icon" [container]="'body'" ngbTooltip='Edit' src="assets/images/edit-pencil.svg">
-                    <img class="action_icon" ngbTooltip='Delete' [container]="'body'" src="assets/icons/delete-table.svg">
-                </div>
-            </div>
-            <div class="body_sec row m-0">
-                <div class="col-4 content withcheckbox">
-                    <div class="kr-sg-checkbox p-0 m-0">
-                        <input id="checkbox-3" class="checkbox-custom" type="checkbox">
-                        <label for="checkbox-3" class="checkbox-custom-label"></label>
-                    </div>
-                    <div class="title">Customer Type</div>
-                </div>
-                <div class="col-3 content">Value</div>
-                <div class="col-3 content">Yes</div>
-                <div class="col-2 content actions">
-                    <img class="action_icon" [container]="'body'" ngbTooltip='Edit' src="assets/images/edit-pencil.svg">
-                    <img class="action_icon" ngbTooltip='Delete' [container]="'body'" src="assets/icons/delete-table.svg">
-                </div>
-            </div>            
+            </div>         
         </perfect-scrollbar>
     </div>
 
@@ -94,115 +64,115 @@
         <div class="close_icon"><img (click)="closeModal()" src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
-    <div class="modal-body textAlignLeft">
+    <div class="modal-body textAlignLeft" *ngIf="addEditFacetObj">
         <div class="search_block">
             <div class="label-text">Field Name</div>             
             <div class="row m-0 align-items-center">
-                <div class="kr-sg-dropdowns col-10 pl-0">
+                <div class="kr-sg-dropdowns col-10 pl-0" [ngClass]="{'disabled': facet._id}">
                     <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
                         <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                        <input type="text" placeholder="Search for Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown">
+                        <input type="text" placeholder="Search for Field" class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown" (keyup)="getFieldAutoComplete(addEditFacetObj.fieldName)" [(ngModel)]="addEditFacetObj.fieldName">
                         <img src="assets/images/search_gray.svg" class="search-icon">                                                         
                         <ul class="dropdown-menu content-menu">
-                            <li><a>Option 1</a></li>
-                            <li><a>Option 2</a></li>
-                            <li><a>Option 3</a></li>
+                            <li *ngFor="let suggesition of fieldAutoSuggestion" (click)="addEditFacetObj.fieldName = suggesition.fieldName"><a>{{suggesition.fieldName}}</a></li>
                         </ul>
                     </div>                        
                 </div>
                 <div class="col-2 pr-0">
-                    <div class="title">Field Type :<span class="string">String</span></div>
+                    <div class="title">Field Type :<span class="string">{{addEditFacetObj.filedType | translate}}</span></div>
                 </div>
             </div>
         </div>          
         <div class="row-content row">
             <div class="kr-sg-input-text col-7 pl-0">
-                <div class="label-text">Label</div>
-                <input type="text" placeholder="Placeholder text" class="input-text">                
+                <div class="label-text">Facet Name</div>
+                <input type="text" placeholder="Placeholder text" class="input-text" [(ngModel)]="addEditFacetObj.facetName">                
             </div>
             <div class="kr-sg-dropdowns col-3 pl-2">
-                <div class="label-text">Label</div>
+                <div class="label-text">Facet Type</div>
                 <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">Choose an option</button>                                            
+                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{(addEditFacetObj.facetType?addEditFacetObj.facetType:'Choose an option') | translate}}</button>                                          
                     <ul class="dropdown-menu content-menu">                                                                   
-                      <li><a>Option 1</a></li>
-                      <li><a>Option 2</a></li>
-                      <li><a>Option 3</a></li>
+                      <li (click)="switchType('value')"><a>Value</a></li>
+                      <li (click)="switchType('range')"><a>Range</a></li>
                     </ul>
                 </div>
             </div>
             <div class="kr-sg-checkbox d-block col-2 checkbox-content pr-0 pl-2 m-0">
-                <input id="checkbox_drp1" class="checkbox-custom" type="checkbox">
-                <label for="checkbox_drp1" class="checkbox-custom-label">Multi Select</label>
+                <input id="checkbox_drp1" class="checkbox-custom" type="checkbox" [(ngModel)]="addEditFacetObj.isMultiSelect">
+                <label for="checkbox_drp1" class="checkbox-custom-label" >Multi Select</label>
             </div>
         </div>  
-        <div class="box-content">
-            <div class="row row_inputs">
+        <div class="box-content" *ngIf="addEditFacetObj.facetType === 'range'">
+            <div class="row row_inputs" *ngFor="let range of addEditFacetObj.facetRange">
                 <div class="kr-sg-input-text col-7 pl-0">
                     <div class="label-text">Range Name (Optional)</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="text" placeholder="Placeholder text" class="input-text" [(ngModel)]="range.rangeName">                   
                 </div>
                 <div class="kr-sg-input-text col-2 pl-2">
                     <div class="label-text">From</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="number" placeholder="Placeholder text" class="input-text" [(ngModel)]="range.from">                   
                 </div>
                 <div class="kr-sg-input-text col-2 pl-2">
                     <div class="label-text">To</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="number" placeholder="Placeholder text" class="input-text" [(ngModel)]="range.to">                   
+                </div>
+                <div class="col-1 pl-2 add">
+                    <img src="assets/images/trashIcon.svg">               
                 </div>
             </div>
             <div class="row row_inputs">
                 <div class="kr-sg-input-text col-7 pl-0">
                     <div class="label-text">Range Name (Optional)</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="text" placeholder="Placeholder text" class="input-text" [(ngModel)]="facetDefaultValueObj[addEditFacetObj.facetType].rangeName">                   
                 </div>
                 <div class="kr-sg-input-text col-2 pl-2">
                     <div class="label-text">From</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="number" placeholder="Placeholder text" class="input-text" [(ngModel)]="facetDefaultValueObj[addEditFacetObj.facetType].from">                   
                 </div>
                 <div class="kr-sg-input-text col-2 pl-2">
                     <div class="label-text">To</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="number" placeholder="Placeholder text" class="input-text" [(ngModel)]="facetDefaultValueObj[addEditFacetObj.facetType].to">                   
                 </div>
                 <div class="col-1 pl-2 add">
-                    <img src="assets/images/add-input-field.svg">               
+                    <img src="assets/images/add-input-field.svg" (click)="addFiled()">               
                 </div>
             </div>
         </div>
+        <ng-container *ngIf="(addEditFacetObj.facetType === 'value') && addEditFacetObj.facetValue">
         <div class="box-content adjust_padding">
             <div class="row row_inputs">
                 <div class="kr-sg-input-text col-6 pl-0">
                     <div class="label-text">Size (Optional)</div>
-                    <input type="text" placeholder="Placeholder text" class="input-text">                   
+                    <input type="number" placeholder="Placeholder text" class="input-text" [(ngModel)]="addEditFacetObj.facetValue.size">                   
                 </div>
                 <div class="kr-sg-dropdowns col-3 pl-2">
                     <div class="label-text">Order (Optional)</div>
                     <div class="dropdown dropdown-open">
-                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">Choose an option</button>                                            
+                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{(addEditFacetObj.facetValue.orderKey?addEditFacetObj.facetValue.orderKey:'Choose an option') | translate}}</button>                                            
                         <ul class="dropdown-menu content-menu">                                                                   
-                          <li><a href="#">Option 1</a></li>
-                          <li><a href="#">Option 2</a></li>
-                          <li><a href="#">Option 3</a></li>
+                          <li (click)="addEditFacetObj.facetValue.orderKey = 'count'"><a>Count</a></li>
+                          <li (click)="addEditFacetObj.facetValue.orderKey = 'label'"><a>Lable</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="kr-sg-dropdowns col-3 pl-2 pr-0">
                     <div class="label-text">Sort</div>
                     <div class="dropdown dropdown-open">
-                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">Choose an option</button>                                            
+                        <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{addEditFacetObj.facetValue.asc?'Assending':'Decending'}}</button>                                        
                         <ul class="dropdown-menu content-menu">                                                                   
-                          <li><a href="#">Option 1</a></li>
-                          <li><a href="#">Option 2</a></li>
-                          <li><a href="#">Option 3</a></li>
+                          <li (click)="addEditFacetObj.facetValue.asc = true"><a>Assending</a></li>
+                          <li (click)="addEditFacetObj.facetValue.asc = false"><a>Decending</a></li>
                         </ul>
                     </div>
                 </div>                
             </div>            
-        </div>   
-    </div>
+        </div> 
+        </ng-container>  
+     </div>
     </perfect-scrollbar> 
-    <div class="modal-footer">          
-        <button type="button" class="kr-sg-button-primary btn_lg float-right">Add</button>        
-        <button type="button" class="kr-sg-button-secondary btn_lg float-right">Cancel</button>
+    <div class="modal-footer" *ngIf="addEditFacetObj">          
+        <button type="button" class="kr-sg-button-primary btn_lg float-right" (click)="addOrUpdate()">{{addEditFacetObj._id?'Save':'Add'}}</button>        
+        <button type="button" class="kr-sg-button-secondary btn_lg float-right" (click)="closeModal()">Cancel</button>
     </div>    
 </kr-modal>
