--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -1,3 +1,4 @@
+@import './../../../app/scss/variables/variables.scss';
 .facets-main-container{
     position: relative;
     height: 100vh;
@@ -191,6 +192,35 @@
     pointer-events: none !important;
     opacity: 0.8;
 }
+.empty-list{
+    width: 320px;
+    margin: 0 auto;
+    // height: calc(100% - 60px);
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;                       
+    -webkit-box-pack: center;                       
+    -ms-flex-pack: center;                       
+    justify-content: center;   
+    height: calc(100% - 146px);
+    img{
+        width: 75%;
+        margin: 0 auto;
+    }     
+    .heading{
+        margin: 18px 0 8px 0;
+        color: $primaryColor;
+    }
+    .desc{
+        color: $secondaryColor;
+        font-size: 14px;
+    }
+} 
 ::ng-deep .facetModalPouup{
     .modal-body{
         .search_block{
