--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -26,7 +26,7 @@
             <div class="col-2 content"></div>
         </div>
         <perfect-scrollbar class="scroll_table">   
-            <div class="empty-list"  *ngIf="!(facet && facet.length)">
+            <div class="empty-list"  *ngIf="!(facets && facets.length)">
                 <ng-container>
                     <img src="assets/images/icons/empty_ill.svg">
                     <div class="heading">No facets</div>
