--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -400,7 +400,7 @@ and open the template in the editor.
         background:#a8000a;
     }
     &:focus{
-        border: solid 1px #1372ff;
+        // border: solid 1px #1372ff;
     }
     &:disabled{
         background:#f1b3b6;
