--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -1,4 +1,25 @@
 @import './../../../app/scss/variables/variables.scss';
+.mainLoadingSpinner{
+    position: absolute;
+    top: 40%;
+    // left: 30%;
+    // box-shadow: 0 5px 10px 0 #e9eff5;
+    background:  transparent;
+    width: 223px;
+    height: 40px;
+    padding-top: 10px;
+    border-radius: 4px;
+    opacity: 0.95;
+    padding-left: 5px;
+    width: 100%;
+    .please-wait-message {
+        position: relative;
+        color: #29293b;
+        top: -16px;
+        left: 25px;
+        font-size: 12px;
+    }  
+}  
 .facets-main-container{
     position: relative;
     height: 100vh;
@@ -280,6 +301,10 @@
                         height: 34px;
                         width: 34px;
                         cursor: pointer;
+                        &.trash{
+                            height: 15px;
+                            width: 15px; 
+                        }
                     }
                 }
             }
