--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -5,6 +5,26 @@
      height: calc(100vh - 62px);
      overflow: hidden;    
      background: #fff; 
+     .mainLoadingSpinner{
+        position: absolute;
+        top: 40%;
+       
+        background:  transparent;
+        width: 223px;
+        height: 40px;
+        padding-top: 10px;
+        border-radius: 4px;
+        opacity: 0.95;
+        padding-left: 5px;
+        width: 100%;
+        .please-wait-message {
+            position: relative;
+            color: #29293b;
+            top: -16px;
+            left: 25px;
+            font-size: 12px;
+        }  
+    }  
     .header-sec-stopwords{
         display: flex;
         align-items: center;
