--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -129,7 +129,7 @@
                             <div class="delete_icon"><img src="assets/icons/delete-table.svg"></div>                 
                         </div>
                     </ng-container>
-                    <div class="row m-0 form_list pl-0" *ngIf="newMappingObj.field_mapping && newMappingObj.field_mapping.defaultValue">
+                    <div class="row m-0 form_list pl-0" *ngIf="newMappingObj && newMappingObj.field_mapping && newMappingObj.field_mapping.defaultValue">
                         <div class="kr-sg-dropdowns col-4 input-box pl-0">
                             <div class="label-text">Action</div>
                             <div class="dropdown dropdown-open">
