--- a/findly-builder/src/app/components/insights/insights.component.scss
+++ b/findly-builder/src/app/components/insights/insights.component.scss
@@ -86,8 +86,19 @@
         height: 37px;
         border-radius: 5px;
         margin-left: 182px;
+        cursor: pointer;
         &:hover{
 
+        }
+        .line-blue{
+            position: absolute;
+            left: 198px;
+            top: 15px;
+        }
+        .line-black{
+            position: absolute;
+            left: 198px;
+            top: 9px;
         }
     }
     .active{
