--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -212,6 +212,36 @@
     }
 }
 ::ng-deep.addWeightModalComponent{  
+    .search_block{
+        padding-bottom: 25px;
+        border-bottom: 1px solid #F5F5F5;
+        .title{
+            color: #9AA0A6;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 15px;
+            span{
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 15px;
+                color: #5F6368;
+                padding-left: 2px;
+            }
+        }
+        .kr-sg-dropdowns{
+            .search-with-dropdown{
+                position: absolute;
+                border: 0;     
+                &::before{
+                    display: none;
+                }               
+            }
+            input{                      
+                padding-left:35px;                    
+            } 
+        }
+        
+    }
     .modal-body{
         .mb-25{
             margin-bottom: 25px;
